# FA4

./: BUGS.txt  CHANGELOG.txt  CMakeLists.txt  README.md  TODO.txt
build.x64/: .gitignore  build-me.bat
pcre/: ReadMe.txt  RunGrepTest.in  config.h  makedft.bat  makefile.dft  pcre.dsw  pcre_compile.c  pcre_dfa_exec.c  pcre_exec.c  pcre_internal.h  pcre_newline.c  pcre_printint.c  pcre_study.c  pcre_valid_utf8.c  pcre_xclass.c  pcreposix.c  upd.bat
pcre/testdata/: grepoutput
src/: .gitignore  FA4.rc  Fa4.c  Fa4.h  Fa4CWin.h  Fa4Comp.c  Fa4Con.c  Fa4Con.h  Fa4Find.c  Fa4Help.c  Fa4Help.h  Fa4List.h  Fa4Out.c  Fa4Out.h  Fa4Show.c  Fa4Util.c  Fa4Util.h  Fa4Vers.h  Fa4Wild.c  Fa4Wild.h  Fa4Work.h  FastComp.h  Pfile.c  WinErr.h  resource.h  winerror.c
utils/: gmFile.h  gmUtil.c  gmUtils.h  gmgetDT4.c  grmLib.c  grmLib.h  grmOut.c  grmOut.h
